# urban-rail-weighted-centrality

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/changsha/: edges_km.csv  station_population_worldpop2027.csv  stations.csv  worldpop2027_processing_metadata.json
docs/: changsha_method.md  data_sources.md  methodology.md  new_york_method.md
results/changsha/: czt_population_weighted_km_results.csv
results/new_york/: nyc_passenger_weighted_ranking_001_150.csv  nyc_passenger_weighted_ranking_151_300.csv  nyc_passenger_weighted_ranking_301_423.csv
scripts/: recompute_changsha.py  verify_nyc_results.py
skills/: README.md
skills/osm-wiki-source-collection/: SKILL.md
skills/rail-centrality-analysis/: SKILL.md
skills/rail-network-construction/: SKILL.md
skills/urban-rail-centrality-pipeline/: SKILL.md
src/urban_rail_centrality/: __init__.py  centrality.py  io.py  population.py
tests/: test_centrality.py
