[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-rail-weighted-centrality"
version = "0.1.0"
description = "Demand-weighted closeness centrality for urban rail networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Andy Xu"}]
dependencies = [
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
